testsuite/bsc.typechecker/kind/DataDefParamGivenNonNumUsedNum.bs
package DataDefParamGivenNonNumUsedNum () where

data (Foo :: * -> *) a = Bar (Bit a)

